--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/MTLLoader.js"></script>
         <script src="js/OrbitControls.js"></script>
         <script src="js/OBJLoader.js"></script>
+        <script src="js/dat.gui.min.js"></script>
         <link rel="stylesheet" href="css/layout.css">
         <title>CG Labs</title>
     </head>
@@ -26,10 +27,10 @@
             uniform vec3 color; varying float vAlpha; void main() { gl_FragColor = vec4( color, vAlpha ); }
         </script>
 
-        <script src="labs/lab08/setup.js"></script>
-        <script src="labs/lab08/build.js"></script>
-        <script src="labs/lab08/animate.js"></script>
-        <script src="labs/lab08/run.js"></script>
+        <script src="Codes/animate.js"></script>
+        <script src="Codes/build.js"></script>
+        <script src="Codes/setup.js"></script>
+        <script src="Codes/run.js"></script>
 
     </body>
 
