--- a/index.html
+++ b/index.html
@@ -1,37 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<head>
+  <title>Solar System</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+</head>
+<body>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.130.1/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+  <script>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="js/three.js"></script>
-        <script src="js/MTLLoader.js"></script>
-        <script src="js/OrbitControls.js"></script>
-        <script src="js/OBJLoader.js"></script>
-        <script src="js/dat.gui.min.js"></script>
-        <link rel="stylesheet" href="css/layout.css">
-        <title>CG Labs</title>
-    </head>
+    function createPlanet(planetData) {
+      const planet = new THREE.Mesh(planetGeometry, planetMaterials[planetData.index]);
+      planet.position.x = planetData.distance;
+      planet.scale.set(planetData.size, planetData.size, planetData.size);
+      scene.add(planet);
+      return planet;
+    }
 
-    <body>
-        <div id="info">
-            <H1>Computer Graphics Demo</H1>
-        </div>
-        <script type='x-shader/x-vertex' id='vertexShader'>
-            attribute float alpha; varying float vAlpha; void main() { vAlpha = alpha; vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 ); gl_PointSize = 2.0; gl_Position = projectionMatrix * mvPosition; }
-        </script>
+    function updatePlanet(planet, planetData) {
+      const material = new THREE.MeshBasicMaterial({ color: planetData.color });
+      planet.material = material;
+      planet.scale.set(planetData.size, planetData.size, planetData.size);
+      planetParams[planetData.index] = planetData;
+    }
 
-        <script type='x-shader/x-fragment' id='fragmentShader'>
+    const galaxy = createGalaxy();
+    
 
-            uniform vec3 color; varying float vAlpha; void main() { gl_FragColor = vec4( color, vAlpha ); }
-        </script>
+    function createGalaxy() {
+        const galaxyGeometry = new THREE.BufferGeometry();
+        const galaxyMaterial = new THREE.PointsMaterial({
+            size: 0.05,
+            color: 0xffffff,
+            transparent: true,
+            opacity: 0.8
+        });
+        const galaxyCount = 100000;
+        const positions = new Float32Array(galaxyCount * 3);
 
-        <script src="Codes/animate.js"></script>
-        <script src="Codes/build.js"></script>
-        <script src="Codes/setup.js"></script>
-        <script src="Codes/run.js"></script>
+        for (let i = 0; i < galaxyCount * 3; i += 3) {
+            const radius = Math.random() * 50 + 50;
+            const theta = Math.random() * Math.PI * 2;
+            const phi = Math.random() * Math.PI * 2;
 
-    </body>
+            positions[i] = Math.cos(theta) * Math.sin(phi) * radius;
+            positions[i + 1] = Math.cos(phi) * radius;
+            positions[i + 2] = Math.sin(theta) * Math.sin(phi) * radius;
+        }
 
+        galaxyGeometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+
+        return new THREE.Points(galaxyGeometry, galaxyMaterial);
+    }
+
+    function animate() {
+      requestAnimationFrame(animate);
+      planets.forEach((planet, index) => {
+        const planetData = planetParams[index];
+        planet.rotation.y += planetData.speed;
+        planet.position.x = planetData.distance * Math.cos(planet.rotation.y);
+        planet.position.z = planetData.distance * Math.sin(planet.rotation.y);
+      });
+      // Move the galaxy down
+      galaxy.geometry.attributes.position.array.forEach((_, index) => {
+        galaxy.geometry.attributes.position.array[index] -= 0.01;
+      });
+        galaxy.geometry.attributes.position.needsUpdate = true;
+      sun.rotation.y += 0.01;
+      galaxy.rotation.y += 0.0005; // Rotate the galaxy slowly
+      controls.update();
+      renderer.render(scene, camera);
+    }
+
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 0, 15);
+    const renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    const sunGeometry = new THREE.SphereGeometry(1, 32, 32);
+    const sunMaterial = new THREE.MeshBasicMaterial({ color: 0xffff00 });
+    const sun = new THREE.Mesh(sunGeometry, sunMaterial);
+    scene.add(sun);
+
+    const planetGeometry = new THREE.SphereGeometry(0.2, 32, 32);
+    const planetMaterials = [
+      new THREE.MeshBasicMaterial({ color: 0x00ff00 }),  // Mercury
+      new THREE.MeshBasicMaterial({ color: 0xff0000 }),  // Venus
+      new THREE.MeshBasicMaterial({ color: 0x0000ff }),  // Earth
+      new THREE.MeshBasicMaterial({ color: 0xffcc00 }),  // Mars
+      new THREE.MeshBasicMaterial({ color: 0xff9900 }),  // Jupiter
+      new THREE.MeshBasicMaterial({ color: 0x663300 }),  // Saturn
+      new THREE.MeshBasicMaterial({ color: 0x3399ff }),  // Uranus
+      new THREE.MeshBasicMaterial({ color: 0x9999ff })   // Neptune
+];
+
+    const planetParams = [
+  { planet: 'Mercury', color: 0x00ff00, size: 0.2, speed: 0.01, distance: 2, index: 0 },
+  { planet: 'Venus', color: 0xff0000, size: 0.3, speed: 0.008, distance: 3, index: 1 },
+  { planet: 'Earth', color: 0x0000ff, size: 0.4, speed: 0.006, distance: 4, index: 2 },
+  { planet: 'Mars', color: 0xffcc00, size: 0.25, speed: 0.005, distance: 5, index: 3 },
+  { planet: 'Jupiter', color: 0xff9900, size: 0.6, speed: 0.003, distance: 7, index: 4 },
+  { planet: 'Saturn', color: 0x663300, size: 0.5, speed: 0.002, distance: 9, index: 5 },
+  { planet: 'Uranus', color: 0x3399ff, size: 0.35, speed: 0.001, distance: 11, index: 6 },
+  { planet: 'Neptune', color: 0x9999ff, size: 0.3, speed: 0.0005, distance: 13, index: 7 }
+];
+
+    const planets = planetParams.map(createPlanet);
+
+    const gui = new dat.GUI();
+    planetParams.forEach(planetData => {
+  const folder = gui.addFolder(planetData.planet);
+  folder.addColor(planetData, 'color').onChange(() => updatePlanet(planets[planetData.index], planetData));
+  folder.add(planetData, 'size', 1, 10).onChange(() => updatePlanet(planets[planetData.index], planetData));
+  folder.add(planetData, 'speed', 0.001, 0.05).onChange(() => updatePlanetSpeed(planetData));
+  folder.add(planetData, 'distance', 1, 20).onChange(() => updatePlanetDistance(planetData));
+});
+
+    function updatePlanetSpeed(planetData) {
+  planetParams[planetData.index].speed = planetData.speed;
+}
+
+    function updatePlanetDistance(planetData) {
+  const planet = planets[planetData.index];
+  planet.position.x = planetData.distance;
+  planetParams[planetData.index].distance = planetData.distance;
+}
+
+    const light = new THREE.PointLight(0xffffff, 1);
+    scene.add(light);
+    scene.add(galaxy);
+
+    const controls = new THREE.OrbitControls(camera, renderer.domElement);
+    controls.enableDamping = true;
+    controls.dampingFactor = 0.05;
+
+    createGalaxy();
+
+    animate();
+
+  </script>
+</body>
 </html>
